Use String.formatted() and text blocks as appropriate